--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Kevy Augusto - .NET Software Developer</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -69,63 +70,9 @@
     </div>
     <div class="container-fluid section-highlighted">
         <div class="row">
-            <div class="col-xs-12 text-center past-employers">
-                <h2>Past Employers and Clients</h2>
-                <hr class="hr-star-light" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
-                        <img class="img-responsive center-block" alt="Site Minder" src="app/img/employers/SiteMinder.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.microsoftinnovationcenters.com/" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="Microsoft" src="app/img/employers/Microsoft.png" />
-                    </a>
-                </div>
-                <div class="clearfix visible-sm-block"></div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://betboo.com" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="Betboo" src="app/img/employers/Betboo.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.lfg.com.br/" target="_blank">
-                        <img class="img-responsive center-block" alt="LFG" src="app/img/employers/LFG.png" />
-                    </a>
-                </div>
-                <div class="clearfix "></div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="Envision Tecnologia" src="app/img/employers/EnvisionTecnologia.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://aplicativos.fipe.org.br/bwgt2010/index.htm" target="_blank">
-                        <img class="img-responsive center-block" alt="Brazilian Workshop Game Theory Society" src="app/img/employers/BWGTS.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
-                        <img class="img-responsive center-block" alt="Paicon Technologies" src="app/img/employers/PaiconTechnologies.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.ithink.com.br/" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="iThink" src="app/img/employers/iThink.png" />
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid section-light">
-        <div class="row">
             <div class="col-xs-12 text-center technologies">
                 <h2>Technologies</h2>
-                <hr class="hr-star" />
+                <hr class="hr-star-light" />
             </div>
         </div>
         <div class="row">
@@ -181,6 +128,61 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid section-light">
+        <div class="row">
+            <div class="col-xs-12 text-center past-employers">
+                <h2>Past Employers and Clients</h2>
+                <hr class="hr-star" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
+                        <img class="img-responsive center-block" alt="Site Minder" src="app/img/employers/SiteMinder.png" />
+                    </a>
+                </div>
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://www.microsoftinnovationcenters.com/" target="_blank">
+                        <img class="img-responsive center-block padding-top-30" alt="Microsoft" src="app/img/employers/Microsoft.png" />
+                    </a>
+                </div>
+                <div class="clearfix visible-sm-block"></div>
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://betboo.com" target="_blank">
+                        <img class="img-responsive center-block padding-top-30" alt="Betboo" src="app/img/employers/Betboo.png" />
+                    </a>
+                </div>
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://www.lfg.com.br/" target="_blank">
+                        <img class="img-responsive center-block" alt="LFG" src="app/img/employers/LFG.png" />
+                    </a>
+                </div>
+                <div class="clearfix "></div>
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
+                        <img class="img-responsive center-block padding-top-30" alt="Envision Tecnologia" src="app/img/employers/EnvisionTecnologia.png" />
+                    </a>
+                </div>
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://aplicativos.fipe.org.br/bwgt2010/index.htm" target="_blank">
+                        <img class="img-responsive center-block" alt="Brazilian Workshop Game Theory Society" src="app/img/employers/BWGTS.png" />
+                    </a>
+                </div>
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
+                        <img class="img-responsive center-block" alt="Paicon Technologies" src="app/img/employers/PaiconTechnologies.png" />
+                    </a>
+                </div>
+                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                    <a href="http://www.ithink.com.br/" target="_blank">
+                        <img class="img-responsive center-block padding-top-30" alt="iThink" src="app/img/employers/iThink.png" />
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="container-fluid">
         <div class="row">
             <div class="col-md-5"></div>
@@ -204,18 +206,20 @@
     <script src="Scripts/classie.js"></script>
     <script src="Scripts/cbpAnimatedHeader.min.js"></script>
 
-<script src="app/js/site.js"></script>
-<!--END JavaScripts-->
-    
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <script src="app/js/site.js"></script>
+    <!--END JavaScripts-->
 
-    ga('create', 'UA-100553870-1', 'auto');
-    ga('send', 'pageview');
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-</script>
+        ga('create', 'UA-100553870-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
