remove div col unnecessary; update links to url shortener

--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -32,8 +32,8 @@
                 <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#about">About</a></li>
-                        <li><a href="/app/files/Kevy_Augusto_Curriculum.pdf" target="_blank">Résumé</a></li>
-                        <li><a href="https://www.linkedin.com/in/kevyaugusto/" target="_blank">LinkedIn</a></li>
+                        <li><a href="https://goo.gl/grR8j1" target="_blank">Résumé</a></li>
+                        <li><a href="https://goo.gl/yCxVAi" target="_blank">LinkedIn</a></li>
                         <!--<li><a href="#">Get In Touch</a></li>-->
                         <!--<li><a href="#">Quotes</a></li>-->
                         <!--<li><a href="#">Blog</a></li>-->
@@ -76,55 +76,53 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12">
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="C#" src="app/img/technologies/visual_csharp.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
-                    <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="SQL Server" src="app/img/technologies/MicrosoftSQLServer.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title=".NET Framework" src="app/img/technologies/DotNETFramework.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="ASP.NET" src="app/img/technologies/ASPNET.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="Windows" src="app/img/technologies/Windows.png" />
-                </div>
-                <div class="clearfix visible-md-block"></div>
-                <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="AWS" src="app/img/technologies/AmazonWebServices.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block  padding-top-30" data-toggle="tooltip" data-original-title="Bootstrap " src="app/img/technologies/Bootstrap.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="HTML5 " src="app/img/technologies/HTML5.png" />
-                </div>
-                <div class="clearfix visible-sm-block"></div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="CSS3 " src="app/img/technologies/CSS3.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
-                    <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="AngularJS" src="app/img/technologies/AngularJS.png" />
-                </div>
-                <div class="clearfix"></div>
-                <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
-                    <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="jQuery" src="app/img/technologies/jQuery.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="Redis" src="app/img/technologies/Redis.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="JavaScript" src="app/img/technologies/JavaScript.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
-                    <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="Git" src="app/img/technologies/Git.png" />
-                </div>
-                <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
-                    <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="MongoDB" src="app/img/technologies/MongoDB.png" />
-                </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="C#" src="app/img/technologies/visual_csharp.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
+                <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="SQL Server" src="app/img/technologies/MicrosoftSQLServer.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title=".NET Framework" src="app/img/technologies/DotNETFramework.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="ASP.NET" src="app/img/technologies/ASPNET.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="Windows" src="app/img/technologies/Windows.png" />
+            </div>
+            <div class="clearfix visible-md-block"></div>
+            <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="AWS" src="app/img/technologies/AmazonWebServices.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block  padding-top-30" data-toggle="tooltip" data-original-title="Bootstrap " src="app/img/technologies/Bootstrap.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="HTML5 " src="app/img/technologies/HTML5.png" />
+            </div>
+            <div class="clearfix visible-sm-block"></div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="CSS3 " src="app/img/technologies/CSS3.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
+                <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="AngularJS" src="app/img/technologies/AngularJS.png" />
+            </div>
+            <div class="clearfix"></div>
+            <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
+                <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="jQuery" src="app/img/technologies/jQuery.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="Redis" src="app/img/technologies/Redis.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="JavaScript" src="app/img/technologies/JavaScript.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-2 col-sm-6">
+                <img class="img-responsive center-block padding-top-30" data-toggle="tooltip" data-original-title="Git" src="app/img/technologies/Git.png" />
+            </div>
+            <div class="technology-logo col-xs-12 col-md-3 col-sm-6">
+                <img class="img-responsive center-block" data-toggle="tooltip" data-original-title="MongoDB" src="app/img/technologies/MongoDB.png" />
             </div>
         </div>
     </div>
@@ -136,49 +134,47 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12">
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
-                        <img class="img-responsive center-block" alt="Site Minder" src="app/img/employers/SiteMinder.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.microsoftinnovationcenters.com/" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="Microsoft" src="app/img/employers/Microsoft.png" />
-                    </a>
-                </div>
-                <div class="clearfix visible-sm-block"></div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://betboo.com" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="Betboo" src="app/img/employers/Betboo.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.lfg.com.br/" target="_blank">
-                        <img class="img-responsive center-block" alt="LFG" src="app/img/employers/LFG.png" />
-                    </a>
-                </div>
-                <div class="clearfix "></div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="Envision Tecnologia" src="app/img/employers/EnvisionTecnologia.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://aplicativos.fipe.org.br/bwgt2010/index.htm" target="_blank">
-                        <img class="img-responsive center-block" alt="Brazilian Workshop Game Theory Society" src="app/img/employers/BWGTS.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.envisiontecnologia.com.br/" target="_blank">
-                        <img class="img-responsive center-block" alt="Paicon Technologies" src="app/img/employers/PaiconTechnologies.png" />
-                    </a>
-                </div>
-                <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
-                    <a href="http://www.ithink.com.br/" target="_blank">
-                        <img class="img-responsive center-block padding-top-30" alt="iThink" src="app/img/employers/iThink.png" />
-                    </a>
-                </div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://www.envisiontecnologia.com.br/" target="_blank">
+                    <img class="img-responsive center-block" alt="Site Minder" src="app/img/employers/SiteMinder.png" />
+                </a>
+            </div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://www.microsoftinnovationcenters.com/" target="_blank">
+                    <img class="img-responsive center-block padding-top-30" alt="Microsoft" src="app/img/employers/Microsoft.png" />
+                </a>
+            </div>
+            <div class="clearfix visible-sm-block"></div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://betboo.com" target="_blank">
+                    <img class="img-responsive center-block padding-top-30" alt="Betboo" src="app/img/employers/Betboo.png" />
+                </a>
+            </div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://www.lfg.com.br/" target="_blank">
+                    <img class="img-responsive center-block" alt="LFG" src="app/img/employers/LFG.png" />
+                </a>
+            </div>
+            <div class="clearfix "></div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://www.envisiontecnologia.com.br/" target="_blank">
+                    <img class="img-responsive center-block padding-top-30" alt="Envision Tecnologia" src="app/img/employers/EnvisionTecnologia.png" />
+                </a>
+            </div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://aplicativos.fipe.org.br/bwgt2010/index.htm" target="_blank">
+                    <img class="img-responsive center-block" alt="Brazilian Workshop Game Theory Society" src="app/img/employers/BWGTS.png" />
+                </a>
+            </div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://www.envisiontecnologia.com.br/" target="_blank">
+                    <img class="img-responsive center-block" alt="Paicon Technologies" src="app/img/employers/PaiconTechnologies.png" />
+                </a>
+            </div>
+            <div class="employer-logo col-xs-12 col-md-3 col-sm-6">
+                <a href="http://www.ithink.com.br/" target="_blank">
+                    <img class="img-responsive center-block padding-top-30" alt="iThink" src="app/img/employers/iThink.png" />
+                </a>
             </div>
         </div>
     </div>
@@ -187,8 +183,8 @@
         <div class="row">
             <div class="col-md-5"></div>
             <div class="col-md-2">
-                <a target="_blank" href="https://github.com/kevyaugusto/"><i class="fa fa-github fa-2x"></i></a>
-                <a target="_blank" href="https://www.linkedin.com/in/kevyaugusto/"><i class="fa fa-linkedin fa-2x"></i></a>
+                <a target="_blank" href="https://goo.gl/pyz5y5"><i class="fa fa-github fa-2x"></i></a>
+                <a target="_blank" href="https://goo.gl/yCxVAi"><i class="fa fa-linkedin fa-2x"></i></a>
             </div>
             <div class="col-md-5"></div>
         </div>
